WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282042
[WPE] clang-19 warning in WPEDisplay
https://bugs.webkit.org/show_bug.cgi?id=282042
Summary
[WPE] clang-19 warning in WPEDisplay
Philippe Normand
Reported
2024-10-24 05:55:13 PDT
WPEDisplay.cpp:98:188: warning: cast from 'EGLBoolean (*)(EGLDisplay)' (aka 'unsigned int (*)(void *)') to 'GDestroyNotify' (aka 'void (*)(void *)') converts to incompatible function type [-Wcast-function-type-mismatch]
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-10-24 06:12:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35676
EWS
Comment 2
2024-10-24 07:45:28 PDT
Committed
285649@main
(f04cbaee78d3): <
https://commits.webkit.org/285649@main
> Reviewed commits have been landed. Closing PR #35676 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug