[WPE] clang-19 warning in WPEDisplay https://bugs.webkit.org/show_bug.cgi?id=282042

Reviewed by Michael Catanzaro.

* Source/WebKit/WPEPlatform/wpe/WPEDisplay.cpp:
(wpeDisplayDispose): Call eglTerminate directly instead of doing it with g_clear_pointer which would
require a cast.

Canonical link: https://commits.webkit.org/285649@main